objects/RFQ_Routing__c.object
<CustomObject>
    <description>Custom object defining detail of Route related to RFQ and RFI</description>
    <fields>
        <fullName>Auto_Stop_on_Rejection__c</fullName>
        <description>Determine what happens when a task in the route is rejected</description>
        <inlineHelpText>Provide the Auto Stop on Rejection</inlineHelpText>
        <label>Auto Stop on Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculate_due_date_based_on__c</fullName>
        <inlineHelpText>Provide the Calculate due date based on Customer response  and Negotiation date</inlineHelpText>
        <label>Calculate due date based on</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiation date</fullName>
                </value>
                <value>
                    <fullName>Customer response date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_response_date_new__c</fullName>
        <label>Customer response date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Indicate Route purpose</description>
        <inlineHelpText>Provide the Routing Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +RFQ__r.Customer_Requirement__r.Device__r.Id,  RFQ__r.Customer_Requirement__r.Device__r.Name  , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FileId__c</fullName>
        <label>FileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Task_Created_Date_Time__c</fullName>
        <label>First Task Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negotiation_Date_New__c</fullName>
        <label>Negotiation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +RFQ__r.Customer_Requirement__r.Id,  RFQ__r.Customer_Requirement__r.Name  , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pause_Date__c</fullName>
        <inlineHelpText>Select the Pause Start Date</inlineHelpText>
        <label>Pause Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pause_End_Date__c</fullName>
        <inlineHelpText>Select the Pause End Date</inlineHelpText>
        <label>Pause End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pause_Period__c</fullName>
        <formula>IF(NOT(ISBLANK(Pause_Start_Date__c)) &amp;&amp; Is_Paused__c, NOW()  -  Pause_Start_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pause Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pause_Reason__c</fullName>
        <label>Pause Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEST Optimization Assessment</fullName>
                </value>
                <value>
                    <fullName>Customer Clarification</fullName>
                </value>
                <value>
                    <fullName>Customer Revisions</fullName>
                </value>
                <value>
                    <fullName>FAE Clarification</fullName>
                </value>
                <value>
                    <fullName>IP Sizing or Response</fullName>
                </value>
                <value>
                    <fullName>Missing Chip/Pkg Definition</fullName>
                </value>
                <value>
                    <fullName>New Request</fullName>
                </value>
                <value>
                    <fullName>Non-Quote Activity</fullName>
                </value>
                <value>
                    <fullName>Package Assessment</fullName>
                </value>
                <value>
                    <fullName>Priority On another quote</fullName>
                </value>
                <value>
                    <fullName>SoC Sizing</fullName>
                </value>
                <value>
                    <fullName>Tool Issues</fullName>
                </value>
                <value>
                    <fullName>2.5D Assessment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pause_Start_Date__c</fullName>
        <label>Pause Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_to_Route__c</fullName>
        <formula>DATEVALUE(CreatedDate)  -   DATEVALUE(RFQ__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote to Route</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Information</label>
        <referenceTo>Request_Information__c</referenceTo>
        <relationshipLabel>Routings</relationshipLabel>
        <relationshipName>RFQ_Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Information__c</fullName>
        <formula>RFQ__r.Request_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Information #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Base_Purpose__c</fullName>
        <description>Define Routing purpose for assignee .Assignee will take action based on the three options.</description>
        <inlineHelpText>For Standard option user can select any action for tasks
For Approval option user should select &apos;Approve&apos; action for tasks
For Review option user should select &apos;Comment&apos; action for tasks</inlineHelpText>
        <label>Route  Base Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route_Duration__c</fullName>
        <formula>IF(ISBLANK(End_Date__c), NOW() - Start_Date__c, End_Date__c - Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Route Duration with Pause</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_Queue_Time__c</fullName>
        <formula>First_Task_Created_Date_Time__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route Queue Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <displayFormat>R-{0000}</displayFormat>
        <label>Routing Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpreadsheetLink__c</fullName>
        <formula>IF( NOT(ISBLANK(FileId__c)) , HYPERLINK(&apos;https://docs.google.com/spreadsheets/d/&apos;+FileId__c, &apos;Open SpreadSheet&apos; ,&apos;_blank&apos;) , &apos;sheet not created&apos;)</formula>
        <label>Response Sheet Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_GUI__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;InProgress&apos;) , Image(&quot;/resource/BnP_Route_InProgress_Status&quot;,&quot;&quot;),
IF( ISPICKVAL( Status__c , &apos;Pause&apos;) , Image(&quot;/resource/BnP_Route_Pause_Status&quot;,&quot;&quot;),
IF( ISPICKVAL( Status__c , &apos;Restart&apos;) , Image(&quot;/resource/BnP_Route_Restart_Status&quot;,&quot;&quot;),
IF( ISPICKVAL( Status__c , &apos;Complete&apos;) , Image(&quot;/resource/BnP_Route_Complete_Status&quot;,&quot;&quot;), 
IF(ISPICKVAL( Status__c , &apos;Cancel&apos;) , Image(&quot;/resource/BnP_Route_Stop_Status&quot;,&quot;&quot;), null 
) 
)
)
)
)</formula>
        <label>Status GUI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Select the Routing Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Pause</fullName>
                </value>
                <value>
                    <fullName>Restart</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether the record is a Template</description>
        <inlineHelpText>Denotes whether the record is a Template</inlineHelpText>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Close_Tasks_Duration_with_Pause__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Route TAT with Pause</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Close_Tasks_Duration_without_Pause__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Route TAT without Pause</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pause_Dur__c</fullName>
        <formula>Total_Pause_Duration_Sum_in_mins__c + Pause_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pause Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pause_Duration_Sum_in_mins__c</fullName>
        <label>Total Pause Duration (Sum in mins)</label>
        <summarizedField>Route_Pause_Details__c.Pause_Duration_in_mins__c</summarizedField>
        <summaryForeignKey>Route_Pause_Details__c.Related_Route__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Route_Duration_without_Pause__c</fullName>
        <formula>IF(Route_Duration__c - Total_Pause_Dur__c &gt; 0, Route_Duration__c - Total_Pause_Dur__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Route Duration without Pause</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Routing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpreadsheetLink__c</field>
            <operation>notEqual</operation>
            <value>sheet not created</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>all_routing</fullName>
        <columns>Option__c</columns>
        <columns>RFQ__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>all routing</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Opportunity_Program_Team__c</fullName>
        <label>Opportunity Program Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>Pause_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Pause&apos;),    ISBLANK(Pause_Reason__c) 
)</errorConditionFormula>
        <errorDisplayField>Pause_Reason__c</errorDisplayField>
        <errorMessage>Please enter &apos;Pause Reason&apos; when Task Status is &apos;Pause&apos;</errorMessage>
    </validationRules>
</CustomObject>